--- a/index.html
+++ b/index.html
@@ -96,50 +96,8 @@
             <div class="relative">
                 <div class="absolute -inset-10 bg-[#ff5a3d]/5 blur-[100px] rounded-full"></div>
                 <div
-                    class="relative bg-[#f4f6f8] rounded-3xl border border-[#e1e3e5] shadow-2xl overflow-hidden aspect-square lg:aspect-[4/3] flex flex-col pt-8 px-8">
-                    <!-- Setup Dashboard Mockup -->
-                    <div
-                        class="bg-white rounded-t-2xl border-x border-t border-[#e1e3e5] flex-1 shadow-sm p-6 overflow-hidden">
-                        <div class="flex items-center justify-between mb-8">
-                            <h3 class="text-lg font-bold">Wallify IG - Instagram Feed</h3>
-                            <div class="flex gap-2">
-                                <div class="h-8 w-8 rounded bg-[#f4f6f8]"></div>
-                                <div class="h-8 w-24 rounded bg-[#f4f6f8]"></div>
-                            </div>
-                        </div>
-                        <div class="space-y-6">
-                            <div class="p-6 bg-white border border-[#e1e3e5] rounded-xl shadow-sm">
-                                <div class="flex justify-between items-center mb-2">
-                                    <h4 class="font-bold">Setup Guide</h4>
-                                    <span
-                                        class="bg-[#ebeef0] text-[#5c5f62] text-[10px] font-bold px-2 py-0.5 rounded-full">3/3
-                                        completed</span>
-                                </div>
-                                <p class="text-xs text-[#5c5f62] mb-6">Use this guide to complete your Instagram feed
-                                    setup.</p>
-                                <div class="space-y-4">
-                                    <div class="flex items-center gap-3">
-                                        <div class="size-5 rounded-full bg-black flex items-center justify-center"><span
-                                                class="material-symbols-outlined text-white text-[14px]">check</span>
-                                        </div>
-                                        <span class="text-sm font-semibold">Connect Instagram account</span>
-                                    </div>
-                                    <div class="flex items-center gap-3">
-                                        <div class="size-5 rounded-full bg-black flex items-center justify-center"><span
-                                                class="material-symbols-outlined text-white text-[14px]">check</span>
-                                        </div>
-                                        <span class="text-sm font-semibold">Sync media</span>
-                                    </div>
-                                    <div class="flex items-center gap-3">
-                                        <div class="size-5 rounded-full bg-black flex items-center justify-center"><span
-                                                class="material-symbols-outlined text-white text-[14px]">check</span>
-                                        </div>
-                                        <span class="text-sm font-semibold">Add block to theme</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    class="relative bg-[#f4f6f8] rounded-3xl border border-[#e1e3e5] shadow-2xl overflow-hidden aspect-square lg:aspect-[4/3] flex items-center justify-center p-4">
+                    <img src="banner1.png" class="w-full h-auto object-contain rounded-xl" alt="Wallify IG Dashboard">
                 </div>
             </div>
         </div>
@@ -214,31 +172,39 @@
                 <div class="relative">
                     <div class="absolute inset-0 bg-black/5 rounded-3xl -rotate-1 translate-x-3 translate-y-3"></div>
                     <div class="relative bg-white p-6 rounded-3xl border border-[#e1e3e5] shadow-xl">
-                        <div class="bg-[#f4f6f8] rounded-xl p-6">
-                            <div class="flex items-center justify-between mb-6">
-                                <h4 class="text-sm font-bold">Feed settings</h4>
-                                <div class="h-px flex-1 mx-4 bg-[#e1e3e5]"></div>
-                            </div>
-                            <div class="space-y-4">
+                        <div class="bg-white rounded-xl p-4">
+                            <h4 class="text-sm font-black text-[#1a1c1d] mb-6">Feed settings</h4>
+                            <div class="space-y-5">
                                 <div class="space-y-1.5">
-                                    <label class="text-[10px] font-bold text-[#5c5f62] uppercase">Title</label>
+                                    <label class="text-xs font-medium text-[#1a1c1d]">Title</label>
                                     <div
-                                        class="h-9 w-full bg-white border border-[#e1e3e5] rounded px-3 flex items-center text-xs">
-                                        INSTAGRAM'DA BİZ</div>
+                                        class="h-9 w-full bg-white border border-[#8a8a8a] rounded-lg px-3 flex items-center text-sm text-[#1a1c1d]">
+                                        We're now on Instagram</div>
                                 </div>
                                 <div class="space-y-1.5">
-                                    <label class="text-[10px] font-bold text-[#5c5f62] uppercase">Subheading</label>
+                                    <label class="text-xs font-medium text-[#1a1c1d]">Subheading</label>
                                     <div
-                                        class="h-12 w-full bg-white border border-[#e1e3e5] rounded px-3 py-2 text-xs leading-tight">
-                                        Daha Fazlası İçin Bizi Takip Edebilirsiniz</div>
+                                        class="h-14 w-full bg-white border border-[#8a8a8a] rounded-lg px-3 py-2 text-sm text-[#1a1c1d] leading-tight">
+                                        Follow us for more</div>
                                 </div>
                                 <div class="space-y-1.5">
-                                    <label class="text-[10px] font-bold text-[#5c5f62] uppercase">Feed type</label>
+                                    <label class="text-xs font-medium text-[#1a1c1d]">Button text</label>
                                     <div
-                                        class="h-9 w-full bg-white border border-[#e1e3e5] rounded px-3 flex items-center justify-between text-xs">
+                                        class="h-9 w-full bg-white border border-[#8a8a8a] rounded-lg px-3 flex items-center text-sm text-[#1a1c1d]">
+                                        Open in Instagram</div>
+                                    <p class="text-[11px] text-[#5c5f62] leading-tight">Shown below posts in preview and
+                                        storefront.</p>
+                                </div>
+                                <div class="space-y-1.5">
+                                    <label class="text-xs font-medium text-[#1a1c1d]">Feed type</label>
+                                    <div
+                                        class="h-9 w-full bg-white border border-[#8a8a8a] rounded-lg px-3 flex items-center justify-between text-sm text-[#1a1c1d]">
                                         <span>Slider</span>
-                                        <span class="material-symbols-outlined text-[16px]">unfold_more</span>
+                                        <span
+                                            class="material-symbols-outlined text-[20px] text-[#5c5f62]">unfold_more</span>
                                     </div>
+                                    <p class="text-[11px] text-[#5c5f62] leading-tight">Grid layout is available on
+                                        Premium plan.</p>
                                 </div>
                             </div>
                         </div>
