--- a/index.html
+++ b/index.html
@@ -96,8 +96,107 @@
             <div class="relative">
                 <div class="absolute -inset-10 bg-[#ff5a3d]/5 blur-[100px] rounded-full"></div>
                 <div
-                    class="relative bg-[#f4f6f8] rounded-3xl border border-[#e1e3e5] shadow-2xl overflow-hidden aspect-square lg:aspect-[4/3] flex items-center justify-center p-4">
-                    <img src="banner1.png" class="w-full h-auto object-contain rounded-xl" alt="Wallify IG Dashboard">
+                    class="relative bg-[#f4f6f8] p-4 md:p-8 rounded-[2.5rem] border border-[#e1e3e5] shadow-2xl overflow-hidden group">
+
+                    <div class="space-y-4">
+                        <!-- Setup Guide Card -->
+                        <div class="bg-white rounded-xl shadow-sm border border-[#f0f0f0] p-6 lg:p-8">
+                            <div class="flex items-center justify-between mb-2">
+                                <div class="flex items-center gap-3">
+                                    <h4 class="text-sm font-black text-[#1a1c1d]">Setup Guide</h4>
+                                    <span
+                                        class="bg-[#f0f0f0] text-[#5c5f62] text-[10px] font-bold px-2 py-0.5 rounded-full">0/3
+                                        completed</span>
+                                </div>
+                                <span class="material-symbols-outlined text-[#1a1c1d] text-lg">expand_less</span>
+                            </div>
+                            <p class="text-xs text-[#5c5f62] mb-8">Use this guide to complete your Instagram feed setup.
+                            </p>
+
+                            <div class="space-y-8">
+                                <div class="flex items-start gap-3">
+                                    <div
+                                        class="size-6 rounded-full border-2 border-dashed border-[#e1e3e5] flex items-center justify-center shrink-0">
+                                        <span class="text-[10px] font-bold text-[#5c5f62]">1</span>
+                                    </div>
+                                    <div class="flex-1">
+                                        <div class="flex items-center justify-between">
+                                            <p class="text-[13px] font-bold text-[#1a1c1d]">Connect Instagram account
+                                            </p>
+                                            <span
+                                                class="material-symbols-outlined text-[#1a1c1d] text-lg">expand_less</span>
+                                        </div>
+                                        <p class="text-xs text-[#5c5f62] mt-1">Instagram account is not connected.</p>
+                                    </div>
+                                </div>
+
+                                <div class="flex items-start gap-3">
+                                    <div
+                                        class="size-6 rounded-full border-2 border-dashed border-[#e1e3e5] flex items-center justify-center shrink-0">
+                                        <span class="text-[10px] font-bold text-[#5c5f62]">2</span>
+                                    </div>
+                                    <div class="flex-1">
+                                        <div class="flex items-center justify-between">
+                                            <p class="text-[13px] font-bold text-[#1a1c1d]">Sync media</p>
+                                            <span
+                                                class="material-symbols-outlined text-[#5c5f62] text-lg">expand_more</span>
+                                        </div>
+                                        <p class="text-xs text-[#5c5f62] mt-1">Instagram is not connected yet.</p>
+                                    </div>
+                                </div>
+
+                                <div class="flex items-start gap-3">
+                                    <div
+                                        class="size-6 rounded-full border-2 border-dashed border-[#e1e3e5] flex items-center justify-center shrink-0">
+                                        <span class="text-[10px] font-bold text-[#5c5f62]">3</span>
+                                    </div>
+                                    <div class="flex-1">
+                                        <div class="flex items-center justify-between">
+                                            <p class="text-[13px] font-bold text-[#1a1c1d]">Add block to theme</p>
+                                            <span
+                                                class="material-symbols-outlined text-[#5c5f62] text-lg">expand_more</span>
+                                        </div>
+                                        <p class="text-xs text-[#5c5f62] mt-4 leading-relaxed">Add the Instagram Feed
+                                            app block in your theme editor, then click refresh.</p>
+                                        <div class="flex gap-2 mt-4">
+                                            <button
+                                                class="bg-white border border-[#e1e3e5] hover:bg-[#f4f6f8] text-black text-[11px] font-bold px-4 py-2 rounded-lg transition-all shadow-sm">
+                                                Open Theme Editor
+                                            </button>
+                                            <button
+                                                class="bg-white border border-[#e1e3e5] hover:bg-[#f4f6f8] text-black text-[11px] font-bold px-4 py-2 rounded-lg transition-all shadow-sm">
+                                                Refresh
+                                            </button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Need Help Card -->
+                        <div
+                            class="bg-white rounded-xl shadow-sm border border-[#f0f0f0] p-6 flex items-center justify-between gap-4">
+                            <div class="space-y-1">
+                                <h5 class="text-sm font-black text-[#1a1c1d]">Need Help?</h5>
+                                <p class="text-xs text-[#5c5f62]">Get support, view FAQs, or contact our team</p>
+                            </div>
+                            <button
+                                class="bg-white hover:bg-[#f4f6f8] border border-[#e1e3e5] text-black text-[11px] font-bold px-4 py-2 rounded-lg transition-all shrink-0 shadow-sm">
+                                Contact Support
+                            </button>
+                        </div>
+
+                        <!-- Instagram Connection Card -->
+                        <div class="bg-white rounded-xl shadow-sm border border-[#f0f0f0] p-6">
+                            <h5 class="text-sm font-black text-[#1a1c1d] mb-2">Instagram Connection</h5>
+                            <p class="text-xs text-[#5c5f62] mb-6">Connect your Instagram business account to display
+                                your feed.</p>
+                            <button
+                                class="bg-[#1a1c1d] hover:bg-black text-white text-[11px] font-bold px-5 py-2.5 rounded-lg transition-all shadow-md">
+                                Connect Instagram
+                            </button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
