--- a/features.html
+++ b/features.html
@@ -174,9 +174,55 @@
                 <div class="relative">
                     <div class="absolute inset-x-0 bottom-0 top-1/2 bg-[#ff5a3d]/5 blur-[120px] rounded-full"></div>
                     <div
-                        class="relative bg-white p-2 rounded-[2.5rem] border border-[#e1e3e5] shadow-2xl overflow-hidden">
-                        <img class="rounded-[2rem] w-full" data-alt="Analytics dashboard showing engagement"
-                            src="https://lh3.googleusercontent.com/aida-public/AB6AXuDdLzaA2rIAuFxvFx10YZLgCChq2bYUIXz4CMAkBfF5pZhzJL-ly7RbVO77UHUHyX_393Qix8z5huZLvMos1AWJCfW2EdPVb2OgjcjKDVYNk9OnUoUx6m3SwvJtlftSZ5SkFMmwlEfDwIgee5VKRBV3EZxUhG3qPF01cAU-ey64C3lg-E66iTMmyW5pXwHkGziqekM9fUISwHoFn48lFGJw5J1AB_zIxmeovtU5Y159lOGem4uo6mEbTHmXQDRcGfkvNUoFmFwYsbo" />
+                        class="relative bg-[#f6f6f7] rounded-[2.5rem] border border-[#e1e3e5] shadow-2xl overflow-hidden p-6 space-y-4">
+                        <!-- Top Metric Cards -->
+                        <div class="grid grid-cols-2 gap-3">
+                            <div class="p-4 bg-white border border-[#e1e3e5] rounded-xl shadow-sm space-y-1">
+                                <div class="flex items-center justify-between">
+                                    <p class="text-[10px] font-bold text-[#5c5f62] uppercase">Total Views</p>
+                                    <span class="material-symbols-outlined text-[14px] text-[#5c5f62]">visibility</span>
+                                </div>
+                                <p class="text-xl font-black text-[#1a1c1d]">7</p>
+                            </div>
+                            <div class="p-4 bg-white border border-[#e1e3e5] rounded-xl shadow-sm space-y-1">
+                                <div class="flex items-center justify-between">
+                                    <p class="text-[10px] font-bold text-[#5c5f62] uppercase">Total Clicks</p>
+                                    <span
+                                        class="material-symbols-outlined text-[14px] text-[#5c5f62]">arrow_right_alt</span>
+                                </div>
+                                <p class="text-xl font-black text-[#1a1c1d]">0</p>
+                            </div>
+                        </div>
+
+                        <!-- Mini Chart and Summary Card -->
+                        <div class="bg-white border border-[#e1e3e5] rounded-xl p-5 space-y-5">
+                            <div class="flex items-center justify-between">
+                                <h6 class="text-xs font-black text-[#1a1c1d]">Last 7 Days Activity</h6>
+                                <span
+                                    class="bg-[#dcf0ff] text-[#0060b9] text-[9px] font-black px-2 py-0.5 rounded-full">7
+                                    interactions</span>
+                            </div>
+                            <div class="flex items-end gap-2.5 h-24 px-1">
+                                <div class="flex-1 bg-[#dbe8e1] rounded-t-sm h-[15%]"></div>
+                                <div class="flex-1 bg-[#dbe8e1] rounded-t-sm h-[15%]"></div>
+                                <div class="flex-1 bg-[#dbe8e1] rounded-t-sm h-[15%]"></div>
+                                <div class="flex-1 bg-[#dbe8e1] rounded-t-sm h-[15%]"></div>
+                                <div class="flex-1 bg-[#dbe8e1] rounded-t-sm h-[15%]"></div>
+                                <div class="flex-1 bg-[#dbe8e1] rounded-t-sm h-[15%]"></div>
+                                <div class="flex-1 bg-[#2c845d] rounded-t-sm h-[85%] relative">
+                                    <span
+                                        class="absolute -top-4 left-1/2 -translate-x-1/2 text-[9px] font-black">7</span>
+                                </div>
+                            </div>
+                            <div class="h-px bg-[#f0f0f0]"></div>
+                            <div class="flex items-center justify-between">
+                                <p class="text-[11px] text-[#5c5f62] font-medium">Best Day</p>
+                                <span
+                                    class="bg-[#dbf8ec] text-[#2c845d] text-[10px] font-black px-2 py-0.5 rounded-md">Wed</span>
+                            </div>
+                        </div>
+
+
                     </div>
                 </div>
             </div>
